feat(#695): show error code in ble error popup

--- a/locales/en.json
+++ b/locales/en.json
@@ -291,7 +291,8 @@
       },
       "bleError": {
         "title": "Failed to transfer",
-        "message": "Something went wrong while transferring {{vcLabel}}. Please try again."
+        "message": "Something went wrong while transferring {{vcLabel}}. Please try again.",
+        "hint": "Error: {{code}}"
       }
     },
     "online": "Online",
@@ -340,7 +341,8 @@
       },
       "bleError": {
         "title": "Failed to transfer",
-        "message": "Something went wrong while transferring {{vcLabel}}. Please try again."
+        "message": "Something went wrong while transferring {{vcLabel}}. Please try again.",
+        "hint": "Error: {{code}}"
       }
     }
   },
