feat(INJI-94): [Vijay] introduce a way to update the environment / registry url in the inji app.
Issue Link https://mosip.atlassian.net/browse/INJI-94

--- a/locales/en.json
+++ b/locales/en.json
@@ -206,6 +206,7 @@
     "name": "Name",
     "vcLabel": "VC Label",
     "language": "Language",
+    "credentialRegistry": "Credential Registry",
     "bioUnlock": "Unlock with biometrics",
     "authFactorUnlock": "Unlock auth factor",
     "AppMetaData": "About Inji",
