--- a/locales/fil.json
+++ b/locales/fil.json
@@ -206,6 +206,7 @@
     "name": "Pangalan",
     "vcLabel": "Panawag sa VC",
     "language": "Wika",
+    "credentialRegistry": "Registry ng Mga Kredensyal",
     "bioUnlock": "I-unlock gamit ang biometrics",
     "authFactorUnlock": "Pagbukas ng auth factor",
     "AppMetaData": "Tungkol kay Inji",
