--- a/locales/hin.json
+++ b/locales/hin.json
@@ -206,6 +206,7 @@
       "name": "नाम",
       "vcLabel": "वीसी लेबल",
       "language": "भाषा",
+      "credentialRegistry": "साख रजिस्ट्री",
       "bioUnlock": "बायोमेट्रिक्स से अनलॉक करें",
       "authFactorUnlock": "अनलॉक ऑथ फैक्टर",
       "AppMetaData": "इंजी के बारे में",
