--- a/locales/hin.json
+++ b/locales/hin.json
@@ -61,7 +61,8 @@
       "yes_confirm": "हां, मैं पुष्टि करता हूं",
       "no": "नहीं",
       "Alert": "चेतावनी",
-      "ok": "ठीक"
+      "ok": "ठीक",
+      "credentialRegistry": "साख रजिस्ट्री"
     },
     "AuthScreen": {
       "header": "क्या आप एप्लिकेशन को अनलॉक करने के लिए बायोमेट्रिक्स का उपयोग करना चाहेंगे?",
