--- a/locales/kan.json
+++ b/locales/kan.json
@@ -61,7 +61,8 @@
     "yes_confirm": "ಹೌದು, ನಾನು ದೃಢೀಕರಿಸುತ್ತೇನೆ",
     "no": "ಸಂ",
     "Alert": "ಎಚ್ಚರಿಕೆ",
-    "ok": "ಸರಿ"
+    "ok": "ಸರಿ",
+    "credentialRegistry": "ರುಜುವಾತುಗಳ ನೋಂದಣಿ"
   },
   "AuthScreen": {
     "header": "ಅಪ್ಲಿಕೇಶನ್ ಅನ್‌ಲಾಕ್ ಮಾಡಲು ಬಯೋಮೆಟ್ರಿಕ್ಸ್ ಬಳಸಲು ನೀವು ಬಯಸುವಿರಾ?",
