--- a/locales/tam.json
+++ b/locales/tam.json
@@ -61,7 +61,8 @@
     "yes_confirm": "ஆம், நான் உறுதி செய்கிறேன்",
     "no": "இல்லை",
     "Alert": "எச்சரிக்கை",
-    "ok": "சரி"
+    "ok": "சரி",
+    "credentialRegistry": "நற்சான்றிதழ்கள் பதிவு"
   },
   "AuthScreen": {
     "header": "பயன்பாட்டைத் திறக்க பயோமெட்ரிக்ஸைப் பயன்படுத்த விரும்புகிறீர்களா?",
