--- a/locales/en.json
+++ b/locales/en.json
@@ -263,6 +263,9 @@
   },
   "RequestScreen": {
     "bluetoothDenied": "Please enable Bluetooth to be able to request {{vcLabel}}",
+    "nearByPermissionDenied": "Please enable Nearby Permission to be able to request {{vcLabel}}",
+    "bluetoothStateAndroid": "Please turn on bluetooth from quick settings to support local sharing",
+    "bluetoothStateIos": "Please turn on bluetooth from control center to support local sharing",
     "showQrCode": "Display this QR code to request resident {{vcLabel}}",
     "incomingVc": "Incoming {{vcLabel}}",
     "request": "Request",
@@ -316,6 +319,10 @@
       "locationDenied": {
         "message": "Location permission is required for the scanning functionality",
         "button": "Allow access to location"
+      },
+      "nearbyPermissionDenied": {
+        "message": "Nearby permission is required for the scanning functionality",
+        "button": "Allow access to Nearby"
       }
     },
     "status": {
