--- a/locales/en.json
+++ b/locales/en.json
@@ -270,8 +270,8 @@
     "request": "Request",
     "errors": {
       "nearbyDevicesPermissionDenied": {
-        "message": "Please enable Nearby Devices Permission to be able to request {{vcLabel}}",
-        "button": "Allow access to Nearby"
+        "message": "Nearby Devices permission is required to be able to request {{vcLabel}}",
+        "button": "Allow Permission"
       }
     },
     "status": {
@@ -327,7 +327,7 @@
       },
       "nearbyDevicesPermissionDenied": {
         "message": "Nearby Devices permission is required for the scanning functionality",
-        "button": "Allow access to Nearby"
+        "button": "Allow Permission"
       }
     },
     "status": {
