--- a/locales/hin.json
+++ b/locales/hin.json
@@ -258,9 +258,17 @@
     },
     "RequestScreen": {
       "bluetoothDenied": "कृपया ब्लूटूथ को सक्षम करें ताकि वह {{vcLabel}} का अनुरोध कर सके",
+      "bluetoothStateAndroid": "स्थानीय साझाकरण का समर्थन करने के लिए कृपया त्वरित सेटिंग से ब्लूटूथ चालू करें",
+      "bluetoothStateIos": " स्थानीय साझाकरण का समर्थन करने के लिए कृपया नियंत्रण केंद्र से ब्लूटूथ चालू करें",
       "showQrCode": "निवासी {{vcLabel}} का अनुरोध करने के लिए यह क्यूआर कोड प्रदर्शित करें",
       "incomingVc": "इनकमिंग {{vcLabel}}",
       "request": "प्रार्थना",
+      "errors": {
+      "nearbyDevicesPermissionDenied": {
+        "message": "{{vcLabel}} का अनुरोध करने में सक्षम होने के लिए आस-पास के उपकरणों की अनुमति आवश्यक है",
+        "button": "अनुमति दें"
+      }
+    },
       "status": {
         "accepted": {
           "title": "सफलता!",
@@ -311,7 +319,11 @@
         "locationDenied": {
           "message": "स्कैनिंग कार्यक्षमता के लिए स्थान अनुमति आवश्यक है",
           "button": "स्थान तक पहुंच की अनुमति दें"
-        }
+        },
+        "nearbyDevicesPermissionDenied": {
+        "message": "स्कैनिंग कार्यक्षमता के लिए आस-पास के उपकरणों की अनुमति आवश्यक है",
+        "button": "अनुमति दें"
+      }
       },
       "status": {
         "connecting": "कनेक्टिंग...",
