--- a/locales/tam.json
+++ b/locales/tam.json
@@ -258,9 +258,17 @@
   },
   "RequestScreen": {
     "bluetoothDenied": "{{vcLabel}}ஐக் கோர புளூடூத்தை இயக்கவும்",
+    "bluetoothStateAndroid": "உள்ளூர் பகிர்வை ஆதரிக்க விரைவான அமைப்புகளிலிருந்து புளூடூத்தை இயக்கவும்",
+    "bluetoothStateIos": "உள்ளூர் பகிர்வை ஆதரிக்க, கட்டுப்பாட்டு மையத்திலிருந்து புளூடூத்தை இயக்கவும்",
     "showQrCode": "குடியுரிமை {{vcLabel}}ஐக் கோர இந்த QR குறியீட்டைக் காட்டு",
     "incomingVc": "உள்வரும் {{vcLabel}}",
     "request": "கோரிக்கை",
+    "errors": {
+      "nearbyDevicesPermissionDenied": {
+        "message": "{{vcLabel}} கோருவதற்கு அருகிலுள்ள சாதனங்களின் அனுமதி தேவை",
+        "button": "அனுமதி அனுமதி"
+      }
+    },
     "status": {
       "accepted": {
         "title": "வெற்றி!",
@@ -311,6 +319,10 @@
       "locationDenied": {
         "message": "ஸ்கேனிங் செயல்பாட்டிற்கு இருப்பிட அனுமதி தேவை",
         "button": "இருப்பிடம் அணுகலை அனுமதி"
+      },
+      "nearbyDevicesPermissionDenied": {
+        "message": "ஸ்கேனிங் செயல்பாட்டிற்கு அருகிலுள்ள சாதனங்களின் அனுமதி தேவை",
+        "button": "அனுமதி அனுமதி"
       }
     },
     "status": {
