Updated with tw-mosip develop branch

--- a/locales/ara.json
+++ b/locales/ara.json
@@ -186,6 +186,7 @@
     }
   },
   "GetVcModal": {
+    "retrievingId": "استرجاع الهوية",
     "errors": {
       "input": {
         "empty": "لا يمكن أن يكون الإدخال فارغًا",
