--- a/locales/kan.json
+++ b/locales/kan.json
@@ -96,7 +96,7 @@
   },
   "RemoveVcWarningOverlay": {
     "alert": "ದಯವಿಟ್ಟು ದ್ರುಡೀಕರಿಸಿ",
-    "RemoveWarning": "ನೀವು ಈ ಕಾರ್ಡ್ ಅನ್ನು ತೆಗೆದುಹಾಕಲು ಬಯಸುವಿರಾ",
+    "removeWarning": "ನೀವು ಈ ಕಾರ್ಡ್ ಅನ್ನು ತೆಗೆದುಹಾಕಲು ಬಯಸುವಿರಾ?",
     "confirm": "ಹೌದು, ನಾನು ದೃಢೀಕರಿಸುತ್ತೇನೆ",
     "no": "ಸಂ"
   },
@@ -182,6 +182,7 @@
     }
   },
   "GetVcModal": {
+    "retrievingId": "ID ಮರುಪಡೆಯಲಾಗುತ್ತಿದೆ",
     "errors": {
       "input": {
         "empty": "ಇನ್ಪುಟ್ ಖಾಲಿ ಇರುವಂತಿಲ್ಲ",
