--- a/locales/tam.json
+++ b/locales/tam.json
@@ -96,7 +96,7 @@
   },
   "RemoveVcWarningOverlay": {
     "alert": "தயவுசெய்து உறுதிப்படுத்தவும்",
-    "RemoveWarning": "இந்த கார்டை அகற்ற விரும்புகிறீர்களா",
+    "removeWarning": "இந்த கார்டை அகற்ற விரும்புகிறீர்களா?",
     "confirm": "ஆம், உறுதி செய்கிறேன்",
     "no": "இல்லை"
   },
@@ -182,6 +182,7 @@
     }
   },
   "GetVcModal": {
+    "retrievingId": "ஐடியை மீட்டெடுக்கிறது",
     "errors": {
       "input": {
         "empty": "உள்ளீடு காலியாக இருக்க முடியாது",
