--- a/locales/en.json
+++ b/locales/en.json
@@ -129,6 +129,7 @@
   "SettingScreen": {
     "header": "Settings",
     "injiAsVerifierApp": "Inji as verifier app",
+    "receiveCard": "Receive Card",
     "basicSettings": "Basic settings",
     "bioUnlock": "Unlock with Biometric",
     "language": "Language",
@@ -354,7 +355,6 @@
     }
   },
   "RequestScreen": {
-    "receiveCard": "REceive Card",
     "bluetoothDenied": "Please enable Bluetooth to be able to request card",
     "bluetoothStateIos": "Bluetooth is turned OFF, please turn it ON from Control center",
     "bluetoothStateAndroid": "Bluetooth is turned OFF, please turn it ON from Quick settings menu",
