--- a/locales/en.json
+++ b/locales/en.json
@@ -355,6 +355,7 @@
     }
   },
   "RequestScreen": {
+    "receiveCard": "Receive Card",
     "bluetoothDenied": "Please enable Bluetooth to be able to request card",
     "bluetoothStateIos": "Bluetooth is turned OFF, please turn it ON from Control center",
     "bluetoothStateAndroid": "Bluetooth is turned OFF, please turn it ON from Quick settings menu",
