--- a/locales/kan.json
+++ b/locales/kan.json
@@ -125,6 +125,7 @@
   "SettingScreen": {
     "header": "ಸಂಯೋಜನೆಗಳು",
     "injiAsVerifierApp": "ವೆರಿಫೈಯರ್ ಆಪ್ ಆಗಿ ಇಂಜಿ",
+    "receiveCard": "ಕಾರ್ಡ್ ಸ್ವೀಕರಿಸಿ",
     "basicSettings": "ಮೂಲ ಸೆಟ್ಟಿಂಗ್‌ಗಳು",
     "bioUnlock": "ಬಯೋಮೆಟ್ರಿಕ್ಸ್‌ನೊಂದಿಗೆ ಅನ್‌ಲಾಕ್ ಮಾಡಿ",
     "language": "ಭಾಷೆ",
