--- a/locales/hin.json
+++ b/locales/hin.json
@@ -149,6 +149,10 @@
     "version": "संस्करण",
     "tuvaliVersion": "तुवाली-संस्करण"
   },
+  "IssuersListScreen": {
+    "title": "नया कार्ड जोड़ें",
+    "header": "नया कार्ड डाउनलोड करने के लिए कृपया नीचे से कोई पसंदीदा विधि चुनें"
+  },
   "HelpScreen": {
     "header": "मदद",
     "whatIsDigitalCredential?": "डिजिटल क्रेडेंशियल क्या है?",
