--- a/locales/tam.json
+++ b/locales/tam.json
@@ -148,6 +148,10 @@
     "version": "பதிப்பு",
     "tuvaliVersion": "துவாலி-பதிப்பு"
   },
+  "IssuersListScreen": {
+    "title": "புதிய அட்டையைச் சேர்க்கவும்",
+    "header": "புதிய கார்டைப் பதிவிறக்க, கீழே இருந்து விருப்பமான முறையைத் தேர்ந்தெடுக்கவும்"
+  },
   "HelpScreen": {
     "header": "உதவி",
     "whatIsDigitalCredential?": "டிஜிட்டல் நற்சான்றிதழ் என்றால் என்ன?",
