--- a/locales/en.json
+++ b/locales/en.json
@@ -153,7 +153,13 @@
   },
   "IssuersListScreen": {
     "title": "Add new card",
-    "header": "Please select a preferred method from below to download a new card"
+    "header": "Please select a preferred method from below to download a new card",
+    "errors":{
+      "generic": {
+        "title": "Something went wrong!",
+        "message": "Our experts are working hard to make things working again."
+      }
+    }
   },
   "HelpScreen": {
     "header": "Help",
