feat(INJI-277): add localization for IssuerScreen error content
Co-authored-by: Sreenadh S <32409698+sree96@users.noreply.github.com>

--- a/locales/ara.json
+++ b/locales/ara.json
@@ -154,7 +154,17 @@
   },
   "IssuersListScreen": {
     "title": "أضف بطاقة جديدة",
-    "header": "الرجاء تحديد طريقة مفضلة أدناه لتنزيل بطاقة جديدة"
+    "header": "الرجاء تحديد طريقة مفضلة أدناه لتنزيل بطاقة جديدة",
+    "errors":{
+      "noInternetConnection": {
+        "title": "لا يوجد اتصال بالإنترنت",
+        "message": "يرجى الاتصال بالإنترنت وإعادة المحاولة."
+      },
+      "generic": {
+        "title": "هناك خطأ ما!",
+        "message":"يعمل خبراؤنا بجد لجعل الأمور تعمل مرة أخرى."
+      }
+    }
   },
   "HelpScreen": {
     "header": "يساعد",
