--- a/locales/kan.json
+++ b/locales/kan.json
@@ -150,7 +150,17 @@
   },
   "IssuersListScreen": {
     "title": "ಹೊಸ ಕಾರ್ಡ್ ಸೇರಿಸಿ",
-    "header": "ಹೊಸ ಕಾರ್ಡ್ ಅನ್ನು ಡೌನ್\u200Cಲೋಡ್ ಮಾಡಲು ದಯವಿಟ್ಟು ಕೆಳಗಿನಿಂದ ಆದ್ಯತೆಯ ವಿಧಾನವನ್ನು ಆಯ್ಕೆಮಾಡಿ"
+    "header": "ಹೊಸ ಕಾರ್ಡ್ ಅನ್ನು ಡೌನ್\u200Cಲೋಡ್ ಮಾಡಲು ದಯವಿಟ್ಟು ಕೆಳಗಿನಿಂದ ಆದ್ಯತೆಯ ವಿಧಾನವನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+    "errors": {
+      "noInternetConnection": {
+        "title": "ಇಂಟರ್ನೆಟ್ ಸಂಪರ್ಕವಿಲ್ಲ",
+        "message": "ದಯವಿಟ್ಟು ಇಂಟರ್ನೆಟ್‌ನೊಂದಿಗೆ ಸಂಪರ್ಕಿಸಿ ಮತ್ತು ಮರುಪ್ರಯತ್ನಿಸಿ."
+      },
+      "generic": {
+        "title": "ಏನೋ ತಪ್ಪಾಗಿದೆ!",
+        "message": "ವಿಷಯಗಳನ್ನು ಮತ್ತೆ ಕೆಲಸ ಮಾಡಲು ನಮ್ಮ ತಜ್ಞರು ಶ್ರಮಿಸುತ್ತಿದ್ದಾರೆ."
+      }
+    }
   },
   "HelpScreen": {
     "header": "ಸಹಾಯ",
