--- a/locales/tam.json
+++ b/locales/tam.json
@@ -150,7 +150,17 @@
   },
   "IssuersListScreen": {
     "title": "புதிய அட்டையைச் சேர்க்கவும்",
-    "header": "புதிய கார்டைப் பதிவிறக்க, கீழே இருந்து விருப்பமான முறையைத் தேர்ந்தெடுக்கவும்"
+    "header": "புதிய கார்டைப் பதிவிறக்க, கீழே இருந்து விருப்பமான முறையைத் தேர்ந்தெடுக்கவும்",
+    "errors": {
+      "noInternetConnection": {
+        "title": "இணைய இணைப்பு இல்லை",
+        "message": "இணையத்துடன் இணைத்து மீண்டும் முயற்சிக்கவும்."
+      },
+      "generic": {
+        "title": "ஏதோ தவறு நடந்துவிட்டது!",
+        "message": "எங்கள் நிபுணர்கள் விஷயங்களை மீண்டும் செயல்பட கடுமையாக உழைத்து வருகின்றனர்."
+      }
+    }
   },
   "HelpScreen": {
     "header": "உதவி",
