--- a/locales/hin.json
+++ b/locales/hin.json
@@ -150,7 +150,17 @@
   },
   "IssuersListScreen": {
     "title": "नया कार्ड जोड़ें",
-    "header": "नया कार्ड डाउनलोड करने के लिए कृपया नीचे से कोई पसंदीदा विधि चुनें"
+    "header": "नया कार्ड डाउनलोड करने के लिए कृपया नीचे से कोई पसंदीदा विधि चुनें",
+    "errors": {
+      "noInternetConnection": {
+        "title": "कोई इंटरनेट कनेक्शन नहीं",
+        "message": "कृपया इंटरनेट से जुड़ें और पुनः प्रयास करें।"
+      },
+      "generic": {
+        "title": "कुछ गलत हो गया!",
+        "message": "हमारे विशेषज्ञ चीजों को फिर से चालू करने के लिए कड़ी मेहनत कर रहे हैं।"
+      }
+    }
   },
   "HelpScreen": {
     "header": "मदद",
