--- a/locales/spa.json
+++ b/locales/spa.json
@@ -253,7 +253,17 @@
   },
 	"IssuersListScreen": {
 		"title": "Agregar nueva tarjeta",
-		"header": "Seleccione un método preferido de los siguientes para descargar una nueva tarjeta"
+		"header": "Seleccione un método preferido de los siguientes para descargar una nueva tarjeta",
+		"errors": {
+			"noInternetConnection": {
+				"title": "Sin conexión a Internet",
+				"message": "Conéctese a Internet y vuelva a intentarlo."
+			},
+			"generic": {
+				"title": "¡Algo salió mal!",
+				"message": "Nuestros expertos están trabajando duro para que todo vuelva a funcionar."
+			}
+		}
 	},
 	"QrScreen": {
 		"title": "Inicio de sesión con código QR",
