refactor(INJI-277): rename IssuersListScreen to IssuersScreen
Co-authored-by: Sreenadh S <32409698+sree96@users.noreply.github.com>

--- a/locales/en.json
+++ b/locales/en.json
@@ -152,7 +152,7 @@
     "version": "Version",
     "tuvaliVersion": "Tuvali-version"
   },
-  "IssuersListScreen": {
+  "IssuersScreen": {
     "title": "Add new card",
     "header": "Please select a preferred method from below to download a new card",
     "errors":{
