--- a/locales/fil.json
+++ b/locales/fil.json
@@ -152,7 +152,7 @@
     "version": "Bersyon",
     "tuvaliVersion": "Tuvali-bersyon"
   },
-  "IssuersListScreen": {
+  "IssuersScreen": {
     "title": "Magdagdag ng bagong card",
     "header": "Mangyaring pumili ng gustong paraan mula sa ibaba upang mag-download ng bagong card",
     "errors": {
