--- a/locales/kan.json
+++ b/locales/kan.json
@@ -148,7 +148,7 @@
     "version": "ಆವೃತ್ತಿ",
     "tuvaliVersion": "ಟುವಾಲಿ-ಆವೃತ್ತಿ"
   },
-  "IssuersListScreen": {
+  "IssuersScreen": {
     "title": "ಹೊಸ ಕಾರ್ಡ್ ಸೇರಿಸಿ",
     "header": "ಹೊಸ ಕಾರ್ಡ್ ಅನ್ನು ಡೌನ್\u200Cಲೋಡ್ ಮಾಡಲು ದಯವಿಟ್ಟು ಕೆಳಗಿನಿಂದ ಆದ್ಯತೆಯ ವಿಧಾನವನ್ನು ಆಯ್ಕೆಮಾಡಿ",
     "errors": {
