--- a/locales/tam.json
+++ b/locales/tam.json
@@ -148,7 +148,7 @@
     "version": "பதிப்பு",
     "tuvaliVersion": "துவாலி-பதிப்பு"
   },
-  "IssuersListScreen": {
+  "IssuersScreen": {
     "title": "புதிய அட்டையைச் சேர்க்கவும்",
     "header": "புதிய கார்டைப் பதிவிறக்க, கீழே இருந்து விருப்பமான முறையைத் தேர்ந்தெடுக்கவும்",
     "errors": {
