refactor(INJI-277): rename IssuersListScreen to IssuersScreen
Co-authored-by: Sreenadh S <32409698+sree96@users.noreply.github.com>

--- a/locales/ara.json
+++ b/locales/ara.json
@@ -151,7 +151,7 @@
     "version": "الإصدار",
     "tuvaliVersion": "نسخة توفالي"
   },
-  "IssuersListScreen": {
+  "IssuersScreen": {
     "title": "أضف بطاقة جديدة",
     "header": "الرجاء تحديد طريقة مفضلة أدناه لتنزيل بطاقة جديدة",
     "errors":{
