--- a/locales/spa.json
+++ b/locales/spa.json
@@ -251,7 +251,7 @@
     "logout": "Cerrar sesión",
     "resetInjiProps": "Restableciendo accesorios Inji..."
   },
-	"IssuersListScreen": {
+	"IssuersScreen": {
 		"title": "Agregar nueva tarjeta",
 		"header": "Seleccione un método preferido de los siguientes para descargar una nueva tarjeta",
 		"errors": {
