feat(INJI-245): download the credentials from esignet after successfull esignet login.

--- a/locales/en.json
+++ b/locales/en.json
@@ -155,6 +155,10 @@
   "IssuersScreen": {
     "title": "Add new card",
     "header": "Please select a preferred method from below to download a new card",
+    "modal": {
+      "title": "In Progress",
+      "hint": "downloading your credential from issuer"
+    },
     "errors":{
       "noInternetConnection": {
         "title": "No internet connection",
