feat(INJI-302): show loader while fetching issuers in IssuersScreen

--- a/locales/en.json
+++ b/locales/en.json
@@ -159,7 +159,8 @@
       "title": "In Progress",
       "hint": "downloading your credential from issuer"
     },
-    "errors":{
+    "loading": "Loading...",
+    "errors": {
       "noInternetConnection": {
         "title": "No internet connection",
         "message": "Please connect with internet and retry."
