feat(INJI-302): add localization support for loader in issuers screen

--- a/locales/ara.json
+++ b/locales/ara.json
@@ -155,6 +155,7 @@
   "IssuersScreen": {
     "title": "أضف بطاقة جديدة",
     "header": "الرجاء تحديد طريقة مفضلة أدناه لتنزيل بطاقة جديدة",
+    "loading": "جار التحميل...",
     "errors":{
       "noInternetConnection": {
         "title": "لا يوجد اتصال بالإنترنت",
