--- a/locales/spa.json
+++ b/locales/spa.json
@@ -260,6 +260,7 @@
 	"IssuersScreen": {
 		"title": "Agregar nueva tarjeta",
 		"header": "Seleccione un método preferido de los siguientes para descargar una nueva tarjeta",
+		"loading": "Cargando...",
 		"errors": {
 			"noInternetConnection": {
 				"title": "Sin conexión a Internet",
