--- a/locales/hin.json
+++ b/locales/hin.json
@@ -152,6 +152,7 @@
   "IssuersScreen": {
     "title": "नया कार्ड जोड़ें",
     "header": "नया कार्ड डाउनलोड करने के लिए कृपया नीचे से कोई पसंदीदा विधि चुनें",
+    "loading": "लोड हो रहा है...",
     "errors": {
       "noInternetConnection": {
         "title": "कोई इंटरनेट कनेक्शन नहीं",
