--- a/locales/tam.json
+++ b/locales/tam.json
@@ -151,6 +151,7 @@
   "IssuersScreen": {
     "title": "புதிய அட்டையைச் சேர்க்கவும்",
     "header": "புதிய கார்டைப் பதிவிறக்க, கீழே இருந்து விருப்பமான முறையைத் தேர்ந்தெடுக்கவும்",
+    "loading": "ஏற்றுகிறது...",
     "errors": {
       "noInternetConnection": {
         "title": "இணைய இணைப்பு இல்லை",
