refactor(INJI-302): modify header message in IssuersScreen

--- a/locales/ara.json
+++ b/locales/ara.json
@@ -154,7 +154,7 @@
   },
   "IssuersScreen": {
     "title": "أضف بطاقة جديدة",
-    "header": "الرجاء تحديد طريقة مفضلة أدناه لتنزيل بطاقة جديدة",
+    "header": "يرجى تحديد الطريقة المفضلة من الأسفل لإضافة بطاقة جديدة",
     "loading": "جار التحميل...",
     "errors":{
       "noInternetConnection": {
