--- a/locales/hin.json
+++ b/locales/hin.json
@@ -151,7 +151,7 @@
   },
   "IssuersScreen": {
     "title": "नया कार्ड जोड़ें",
-    "header": "नया कार्ड डाउनलोड करने के लिए कृपया नीचे से कोई पसंदीदा विधि चुनें",
+    "header": "नया कार्ड जोड़ने के लिए कृपया नीचे से कोई पसंदीदा विधि चुनें",
     "loading": "लोड हो रहा है...",
     "errors": {
       "noInternetConnection": {
