--- a/locales/fil.json
+++ b/locales/fil.json
@@ -154,7 +154,7 @@
   },
   "IssuersScreen": {
     "title": "Magdagdag ng bagong card",
-    "header": "Mangyaring pumili ng gustong paraan mula sa ibaba upang mag-download ng bagong card",
+    "header": "Mangyaring pumili ng gustong paraan mula sa ibaba upang magdagdag ng bagong card",
     "loading": "Naglo-load...",
     "errors": {
       "noInternetConnection": {
