--- a/locales/kan.json
+++ b/locales/kan.json
@@ -150,7 +150,7 @@
   },
   "IssuersScreen": {
     "title": "ಹೊಸ ಕಾರ್ಡ್ ಸೇರಿಸಿ",
-    "header": "ಹೊಸ ಕಾರ್ಡ್ ಅನ್ನು ಡೌನ್\u200Cಲೋಡ್ ಮಾಡಲು ದಯವಿಟ್ಟು ಕೆಳಗಿನಿಂದ ಆದ್ಯತೆಯ ವಿಧಾನವನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+    "header": "ದಯವಿಟ್ಟು ಹೊಸ ಕಾರ್ಡ್ ಸೇರಿಸಲು ಕೆಳಗಿನಿಂದ ಆದ್ಯತೆಯ ವಿಧಾನವನ್ನು ಆಯ್ಕೆಮಾಡಿ",
     "loading": "ಲೋಡ್ ಆಗುತ್ತಿದೆ...",
     "errors": {
       "noInternetConnection": {
