--- a/locales/tam.json
+++ b/locales/tam.json
@@ -155,7 +155,14 @@
   "IssuersScreen": {
     "title": "புதிய அட்டையைச் சேர்க்கவும்",
     "header": "புதிய கார்டைச் சேர்க்க கீழே இருந்து விருப்பமான முறையைத் தேர்ந்தெடுக்கவும்",
-    "loading": "ஏற்றுகிறது...",
+    "loaders": {
+      "loading": "ஏற்றுகிறது...",
+      "subTitle": {
+        "displayIssuers": "Fetching Issuers",
+        "settingUp": "Setting up",
+        "downloadingCredentials": "Downloading Credentials",
+      }
+    },
     "errors": {
       "noInternetConnection": {
         "title": "இணைய இணைப்பு இல்லை",
