feat(INJI-351): add elements to vcDetails page

--- a/locales/en.json
+++ b/locales/en.json
@@ -47,7 +47,7 @@
     "status": "Status",
     "valid": "Valid",
     "photo": "Photo",
-    "fullName": "Full name",
+    "fullName": "Full Name",
     "gender": "Gender",
     "dateOfBirth": "Date of birth",
     "phoneNumber": "Phone number",
