feat(INJI-593): refactoring issuers search bar and add translations
Signed-off-by: Pooja Babusingh <68894211+PoojaBabusingh@users.noreply.github.com>

--- a/locales/ara.json
+++ b/locales/ara.json
@@ -160,7 +160,7 @@
   "IssuersScreen": {
     "title": "أضف بطاقة جديدة",
     "description": "يرجى اختيار جهة الإصدار المفضلة لديك من الخيارات أدناه لإضافة بطاقة جديدة.",
-    "searchByIssuersName": "البحث حسب اسم المصدر",
+    "searchByIssuersName": "ابحث هنا",
     "loaders": {
       "loading": "جار التحميل...",
       "subTitle": {
