--- a/locales/fil.json
+++ b/locales/fil.json
@@ -159,7 +159,7 @@
   "IssuersScreen": {
     "title": "Magdagdag ng bagong card",
     "description": "Mangyaring piliin ang iyong gustong tagabigay mula sa mga opsyon sa ibaba upang magdagdag ng bagong card.",
-    "searchByIssuersName": "Maghanap ayon sa pangalan ng Nag-isyu",
+    "searchByIssuersName": "Maghanap dito",
     "loaders": {
       "loading": "Naglo-load...",
       "subTitle": {
