--- a/locales/hin.json
+++ b/locales/hin.json
@@ -157,7 +157,7 @@
   "IssuersScreen": {
     "title": "नया कार्ड जोड़ें",
     "description": "नया कार्ड जोड़ने के लिए कृपया नीचे दिए गए विकल्पों में से अपना पसंदीदा जारीकर्ता चुनें।",
-    "searchByIssuersName": "जारीकर्ता के नाम से खोजें",
+    "searchByIssuersName": "यहां तलाश करो",
     "loaders": {
       "loading": "लोड हो रहा है...",
       "subTitle": {
