--- a/locales/kan.json
+++ b/locales/kan.json
@@ -156,7 +156,7 @@
   "IssuersScreen": {
     "title": "ಹೊಸ ಕಾರ್ಡ್ ಸೇರಿಸಿ",
     "description": "ದಯವಿಟ್ಟು ಹೊಸ ಕಾರ್ಡ್ ಸೇರಿಸಲು ಕೆಳಗಿನ ಆಯ್ಕೆಗಳಿಂದ ನಿಮ್ಮ ಆದ್ಯತೆ ನೀಡುವವರನ್ನು ಆಯ್ಕೆಮಾಡಿ.",
-    "searchByIssuersName": "ವಿತರಕರ ಹೆಸರಿನ ಮೂಲಕ ಹುಡುಕಿ",
+    "searchByIssuersName": "ಇಲ್ಲಿ ಹುಡುಕಿ",
     "loaders": {
       "loading": "ಲೋಡ್ ಆಗುತ್ತಿದೆ...",
       "subTitle": {
