--- a/locales/spa.json
+++ b/locales/spa.json
@@ -161,7 +161,7 @@
   "IssuersScreen": {
     "title": "Agregar nueva tarjeta",
     "description": "Elija su emisor preferido entre las opciones siguientes para agregar una nueva tarjeta.",
-    "searchByIssuersName": "Buscar por nombre del emisor",
+    "searchByIssuersName": "Busca aquí",
     "loaders": {
       "loading": "Cargando...",
       "subTitle": {
