--- a/locales/tam.json
+++ b/locales/tam.json
@@ -156,7 +156,7 @@
   "IssuersScreen": {
     "title": "புதிய அட்டையைச் சேர்க்கவும்",
     "description": "புதிய கார்டைச் சேர்க்க, கீழே உள்ள விருப்பங்களிலிருந்து உங்களுக்கு விருப்பமான வழங்குபவரைத் தேர்ந்தெடுக்கவும்.",
-    "searchByIssuersName": "வழங்குபவரின் பெயரால் தேடவும்",
+    "searchByIssuersName": "இங்கே தேடவும்",
     "loaders": {
       "loading": "ஏற்றுகிறது...",
       "subTitle": {
